repots ans sales search fixes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,9 @@
  *= require awesomplete
  *= require sweetalert
  *= require datepicker/datepicker
+ *= require daterangepicker/daterangepicker
  *= require style
+ *= require global
 
 
  */
