--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -53,6 +53,7 @@
                   <th>Sku</th>
                   <th>Item</th>
                   <th>Category</th>
+                  <th>Location</th>
                   <th>Available</th>
                   <th>Sold</th>
                   <th>Price</th>
@@ -67,6 +68,7 @@
                       <td><%= item.sku %></td>
                       <td><%= item.name %></td>
                       <td><%= item.item_category.blank? ? '-' : item.item_category.name %></td>
+                      <td><%= item.location.blank? ? '-' : item.location.name %></td>
                       <td><%= item.stock_amount %></td>
                       <td><%= item.amount_sold %></td>
                       <td><%= number_to_currency(item.price , unit: current_company.currency)%></td>
