reports and tweet fixes

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -18,7 +18,13 @@
 //  background-color: #65bd77;
 //  border-color: #65bd77;
 //}
-
+.quick-actions a i {
+  font-size: 20px;
+  padding-right: 20px;
+  color: #000;
+  border-right: 1px solid #d7dce5;
+  margin-right: 20px;
+}
 
 
 .company-name-center{
