--- a/app/views/configuration/edit.html.erb
+++ b/app/views/configuration/edit.html.erb
@@ -6,7 +6,7 @@
             <h3 style="color:#717171;">Edit Company</h3>
           </header>
           <div class="panel-body">
-            <%= form_for current_company , url: edit_configuration_path(current_company) , method: :patch , html: {class: "bs-example form-horizontal"} do |f|  %>
+            <%= form_for current_company , url: configuration_path(current_company), html: {method: :patch  ,class: "bs-example form-horizontal"} do |f|  %>
 
                 <div class="form-group">
                   <%= f.label :company_name , class: 'col-lg-2 control-label' %>
@@ -27,7 +27,7 @@
                 <div class="form-group">
                   <label class="col-sm-2 control-label">Company Logo</label>
                   <div class="col-sm-10">
-                    <%= f.file_field :logo, :class=>"btn btn-default",data: { fp_crop_ratio: "*/4", fp_button_class: 'btn btn-default',fp_button_text: 'Upload'}%>
+                    <%= f.filepicker_field :logo, :class=>"btn btn-default",data: { fp_crop_ratio: "*/4", fp_button_class: 'btn btn-default',fp_button_text: 'Upload'}%>
 
                     <%#= f.file_field :logo, :class=>"filestyle",:style=>"display:none" ,"data-icon" => "false",  "data-classButton" => "btn btn-default",  "data-classInput" => "form-control inline input-s" %>
                     <span class="help-block m-b-none">Please crop the logo properly.</span>
@@ -64,8 +64,9 @@
                 <div class="form-group">
                   <label class="col-lg-2 control-label">Currency</label>
                   <div class="col-lg-10">
-                    <%= f.select :currency ,ISO3166::Country.all.map(&:currency).first(10).collect{ |c| c.name} , {} ,class:"form-control" %>
-                    <span class="help-block m-b-none">Default is Dollar</span>
+                    <%= f.text_field :currency , value: current_company.get_country.currency.name , disabled: true , class: "form-control" %>
+                    <%#= f.select :currency ,current_company.get_country.currency.name  , {} ,disabled: true, class:"form-control" %>
+                    <!--<span class="help-block m-b-none">Default is Dollar</span>-->
                   </div>
                 </div>
                 <div class="form-group">
@@ -140,7 +141,7 @@
                 <div class="line line-dashed line-lg pull-in"></div>
                 <div class="form-group">
                   <div class="col-lg-offset-2 col-lg-10">
-                    <%= f.submit 'Save/Configuration' , class:"btn btn-info" %>
+                    <%= f.button 'Save/Configuration'.html_safe , class:"btn btn-info" , data: {disable_with: disable_spinning('Saving...')}%>
                     <%= button_tag "Cancel", type: 'reset',:class=>"btn" %>
                   </div>
                 </div>
