--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'customers/partials/new_customer_modal' %>
   <section class="hbox stretch">
     <aside>
 
@@ -7,24 +7,7 @@
 
         <header class="header bg-white b-b clearfix">
           <div class="row m-t-sm">
-            <div class="col-sm-8 m-b-xs">
-              <!--<a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default active"><i class="fa fa-caret-right text fa-lg"></i><i class="fa fa-caret-left text-active fa-lg"></i></a>-->
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-default" title="Refresh"><i class="fa fa-refresh"></i></button>
-                <!--<button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>-->
-                <!--<button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>-->
-                <!--<ul class="dropdown-menu">-->
-                <!--<li><a href="#">Action</a></li>-->
-                <!--<li><a href="#">Another action</a></li>-->
-                <!--<li><a href="#">Something else here</a></li>-->
-                <!--<li class="divider"></li>-->
-                <!--<li><a href="#">Separated link</a></li>-->
-                <!--</ul>-->
-              </div>
-              <a href="<%= new_customer_path%>" class="btn btn btn-sm btn-primary"><i class="fa fa-plus"></i> Create</a>
-              <!--<a href="#new-item-category" data-toggle="new-item-category" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Create</a>-->
-            </div>
-            <div class="col-sm-4 m-b-xs">
+            <div class="col-sm-10 m-b-xs pull-left">
               <%= form_for item_categories_path do |f| %>
                   <div class="input-group">
                     <%= f.text_field :name , class: "input-sm form-control"  , placeholder: "Search Coming Soon" %>
@@ -35,6 +18,24 @@
               <%end%>
 
             </div>
+            <div class="col-sm-2 m-b-xs pull-right">
+              <!--<a href="#subNav" data-toggle="class:hide" class="btn btn-sm btn-default active"><i class="fa fa-caret-right text fa-lg"></i><i class="fa fa-caret-left text-active fa-lg"></i></a>-->
+              <!--<div class="btn-group">-->
+                <!--&lt;!&ndash;<button type="button" class="btn btn-sm btn-default" title="Refresh"><i class="fa fa-refresh"></i></button>&ndash;&gt;-->
+                <!--&lt;!&ndash;<button type="button" class="btn btn-sm btn-default" title="Remove"><i class="fa fa-trash-o"></i></button>&ndash;&gt;-->
+                <!--&lt;!&ndash;<button type="button" class="btn btn-sm btn-default" title="Filter" data-toggle="dropdown"><i class="fa fa-filter"></i> <span class="caret"></span></button>&ndash;&gt;-->
+                <!--&lt;!&ndash;<ul class="dropdown-menu">&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#">Action</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#">Another action</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#">Something else here</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li class="divider"></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#">Separated link</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+              <!--</div>-->
+              <%= link_to raw("<i class='fa fa-plus'></i> Create") , '#' , class: "btn btn btn-sm btn-primary pull-right" ,data: {'toggle': "modal" , 'target': "#new_customer_modal"}%>
+              <!--<a href="#new-item-category" data-toggle="new-item-category" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Create</a>-->
+            </div>
+
 
 
           </div>
