--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -20,7 +20,7 @@
 
       <%= stylesheet_link_tag "base", media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag :base, "data-turbolinks-track" => true %>
-
+      <%#= filepicker_js_include_tag %>
       <%= csrf_meta_tags %>
 
     </head>
