--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,24 +1,121 @@
-<div class="panel panel-default">
+  <section class="hbox stretch">
+    <!-- .aside -->
+    <aside class="aside aside-md bg-white">
+      <section class="vbox">
+        <header class="dk header">
+          <p class="h4">Reports</p>
+        </header>
+        <section>
+          <section>
+            <section id="mail-nav" class="hidden-xs">
+              <ul class="nav nav-pills nav-stacked no-radius">
+                <li>
+                  <a href="#">
+                    <i class="fa fa-fw fa-shopping-cart"></i>
+                    Sales Report
+                  </a>
+                </li>
+                <li class="active">
+                  <a href="#">
+                    <i class="fa fa-fw fa-clipboard"></i>
+                    Inventory Report
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fa fa-fw fa-bookmark-o"></i>
+                    Dead Inventory Report
+                  </a>
+                </li>
+              </ul>
+            </section>
+          </section>
+        </section>
+      </section>
+    </aside>
+    <!-- /.aside -->
+    <!-- .aside -->
+    <aside class="bg-light lter b-l" id="email-list">
+      <section class="vbox">
+        <header class="bg-light dk header clearfix">
+          <div class="btn-group pull-right">
+            <button type="button" class="btn btn-sm btn-default">pdf</button>
+            <button type="button" class="btn btn-sm btn-default">CSV</button>
+            <button type="button" class="btn btn-sm btn-default">xls</button>
+          </div>
+          <div class="btn-toolbar">
+            <div class="btn-group select">
+              <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+                <span class="dropdown-label" style="width: 65px;">Filter</span>
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu text-left text-sm">
+                <li><a href="#">Today</a></li>
+                <li><a href="#">This Week</a></li>
+                <li><a href="#">Last Week</a></li>
+                <li><a href="#">This Month</a></li>
+                <li><a href="#">Last Month</a></li>
+                <li><a href="#">This Year</a></li>
+                <li><a href="#">Last Year</a></li>
+                <li><a href="#">Custom</a></li>
 
-	<div class="panel-body">
-	  <ul class="nav nav-tabs hidden-print">
-	    <li class="active"><a href="#totals" data-toggle="tab">Totals</a></li>
-	    <li><a href="#today" data-toggle="tab">Today</a></li>
-	    <li><a href="#date_range" data-toggle="tab">Date Range</a></li>
-	  </ul>
-  
-	  <div class="tab-content">
-	    <div class="tab-pane active" id="totals">
-	    	<%= render :partial => 'template/sales_summary' %>
-	    </div>
-	    <div class="tab-pane" id="today">
-	    	<%= render :partial => 'template/sales_today' %>
-	    </div>
-	    <div class="tab-pane" id="date_range">
-	    	<%= render :partial => 'template/sales_date_range' %>
-	    </div>
-	  </div>
-	</div>
+              </ul>
+            </div>
+          </div>
+        </header>
+        <section class="scrollable hover">
+          <%= render 'template/sales_today' , sales: @total_sales %>
+        </section>
 
-
-</div>
+        <footer class="footer bg-white-only b-t">
+          <div class="row text-center-xs pull-right" style="margin: 0px 2%;">
+            <%= will_paginate @total_sales, renderer: BootstrapPagination::Rails %>
+          </div>
+        </footer>
+      </section>
+    </aside>
+    <!-- /.aside -->
+    <aside class="aside-sm b-l">
+      <section class="vbox">
+        <header class="bg-light dk header">
+          <p>Filter(s)</p>
+        </header>
+        <section class="scrollable bg-white">
+          <div class="list-group list-group-alt no-radius no-borders">
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-success text-xs"></i>
+              <span>Cris Labiso</span>
+            </a>
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-muted text-xs"></i>
+              <span>Daniel Sandvid</span>
+            </a>
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-danger text-xs"></i>
+              <span>Helder Oliveira</span>
+            </a>
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-muted text-xs"></i>
+              <span>Jeff Broderik</span>
+            </a>
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-muted text-xs"></i>
+              <span>Jonathan Morina</span>
+            </a>
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-success text-xs"></i>
+              <span>Mason Yarnell</span>
+            </a>
+            <a class="list-group-item" href="#">
+              <i class="fa fa-circle text-danger text-xs"></i>
+              <span>Mike Mcalidek</span>
+            </a>
+          </div>
+        </section>
+        <footer class="footer text-center b-t">
+          <button class="btn btn-success btn-sm"><i class="fa fa-plus"></i> New contact</button>
+        </footer>
+      </section>
+    </aside>
+  </section>
+  <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
