--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -33,7 +33,7 @@
         <div class="row m-l-none m-r-none bg-light lter">
           <div class="col-sm-6 col-md-3 padder-v b-r b-light">
             <span class="fa-stack fa-2x pull-left m-r-sm">
-              <i class="fa fa-circle fa-stack-2x text-info"></i>
+              <i class="fa fa-circle fa-stack-2x text-dark"></i>
               <i class="fa fa-male fa-stack-1x text-white"></i>
             </span>
             <a class="clear" href="<%= customers_path %>">
@@ -44,7 +44,7 @@
 
           <div class="col-sm-6 col-md-3 padder-v b-r b-light lt">
             <span class="fa-stack fa-2x pull-left m-r-sm">
-              <i class="fa fa-circle fa-stack-2x text-warning"></i>
+              <i class="fa fa-circle fa-stack-2x text-dark"></i>
               <i class="fa fa-shopping-cart fa-stack-1x text-white"></i>
             </span>
             <a class="clear" href="<%= '#' %>">
@@ -55,7 +55,7 @@
 
           <div class="col-sm-6 col-md-3 padder-v b-r b-light">
             <span class="fa-stack fa-2x pull-left m-r-sm">
-              <i class="fa fa-circle fa-stack-2x text-danger"></i>
+              <i class="fa fa-circle fa-stack-2x text-dark"></i>
               <i class="fa fa-inbox fa-stack-1x text-white"></i>
             </span>
             <a class="clear" href="<%= items_path %>">
@@ -65,7 +65,7 @@
           </div>
           <div class="col-sm-6 col-md-3 padder-v b-r b-light lt">
                     <span class="fa-stack fa-2x pull-left m-r-sm">
-                      <i class="fa fa-circle fa-stack-2x icon-muted"></i>
+                      <i class="fa fa-circle fa-stack-2x text-dark"></i>
                       <i class="fa fa-clock-o fa-stack-1x text-white"></i>
                     </span>
             <a class="clear" href="#">
