--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
       <meta name="description" content="<%= current_user.company_description %>">
       <meta name="viewport" content ="width=device-width; initial-scale=1.0;">
       <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+      <%= javascript_include_tag :application %>
+
       <%= csrf_meta_tags %>
       <%= yield :head %>
 
@@ -34,7 +36,6 @@
                 <%=render 'users/partials/change_password'%>
               </section>
 
-              <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
               <%= filepicker_js_include_tag %>
               <%= yield(:scripts) %>
               <script>
