--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -16,3 +16,9 @@
 .search-expend:focus {
   width: 150%;
 }
+abbr{
+  color: red !important;
+}
+.date select.date.form-control {
+  width: auto;
+}
