--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -83,7 +83,7 @@
         <span class="arrow top"></span>
         <li>
 
-          <a href="<%= change_password_path %>" ><i class="fa fa-pencil icon" style="margin-right:7px;"></i> My Profile</a>
+          <a href="#" ><i class="fa fa-pencil icon" style="margin-right:7px;"></i> My Profile</a>
         </li>
         <li>
           <%= link_to raw("<i class='fa fa-lock icon m-r-7'></i> Change Password") , '#' , data: {"toggle": "modal" , 'target': '#change_password_modal'}  %>
