--- a/app/views/reports/partials/_sales_filters.html.erb
+++ b/app/views/reports/partials/_sales_filters.html.erb
@@ -1,43 +1,41 @@
-<div class="container">
-  <div class="row">
-    <div id="filter-panel" class="collapse filter-panel">
-      <div class="panel panel-default">
-        <div class="panel-body">
-            <%= form_for :sales_filter ,html: {class: 'form-inline'} do |f| %>
-                <div class="form-group">
-                  <label class="filter-col" style="margin-right:0;" for="pref-perpage">Location:</label>
-                  <%= f.select(:location_id, current_company.locations.published.collect {|role| [ role.name, role.id ] }, {prompt: 'Select Location'} , class: "form-control" ) %>
-                </div>
-
-                <div class="form-group">
-                  <label class="filter-col" style="margin-right:0;" for="pref-orderby">Employee:</label>
-                  <%= f.select(:employee_id, current_company.users.collect {|role| [ role.username, role.id ] }, {prompt: 'Select Employee'} , class: "form-control" ) %>
-                </div>
-
-              <div class="form-group">
-                <!--<label class="filter-col" style="margin-right:0;" for="pref-search">Date Range:</label>-->
-                <div id="reportrange" style="background: #fff; cursor: pointer; padding: 7px 15px; border: 1px solid #ccc; width: 100%">
-                  <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
-                  <span></span> <b class="caret"></b>
-                </div>
-              </div>
-
-                <div class="form-group">
-                  <%= f.button "<span class='glyphicon glyphicon-record'></span> Save".html_safe , data: {disable_with: disable_spinning("Submitting...")} , class: "btn btn-default filter-col"%>
-                </div>
-          <% end %>
-        </div>
+<!-- .aside -->
+<aside class="aside-lg bg-white b-l hide <%= params[:q].present? ? 'show' : '' %>" id="aside">
+  <div class="wrapper">
+    <h4 class="m-t-none">Filters</h4>
+    <%= search_form_for @search ,url: sales_reports_path  , method: :post , html: {class: ''} do |f| %>
+        <%#= render 'reports/partials/sales_filter_form' , f: f , f_c: '' %>
+        <!--<div class="field">-->
+        <!--Sort:-->
+        <!--<%#= f.sort_fields do |s| %>-->
+        <!--<%#= s.sort_select({only: [:id]} , {class: "form-control col-md-6"}) %>-->
+        <!--<%# end %>-->
+        <!--</div>-->
+      <div class="form-group">
+        <label>Locations</label>
+        <%= f.collection_select :location_id_in, current_company.locations.published, :id, :name, {}, {:multiple => true , style:"width: 100%"} %>
       </div>
-    </div>
-    <%= button_tag "<span class='glyphicon glyphicon-cog'></span> Filters".html_safe , class: 'btn btn-primary pull-right' , data: {'toggle': 'collapse' , 'target': '#filter-panel' } %>
+
+      <div class="form-group">
+        <label>Employees</label>
+        <%= f.collection_select :user_id_in, current_company.users, :id, :username, {}, {:multiple => true ,style:"width: 100%"} %>
+      </div>
+      <div class="form-group">
+        <label>Start Date</label>
+        <%= f.text_field :created_at_gteq, :class=>"datepicker-input form-control" , value:  Date.today.to_s , 'data-date-format': "yyyy-mm-dd"  %>
+      </div>
+      <div class="form-group">
+        <label>End Date</label>
+        <%= f.text_field :created_at_lteq, :class=>"datepicker-input form-control"  , value:  Date.today.to_s , 'data-date-format': "yyyy-mm-dd"  %>
+      </div>
+      <%= f.button "<span class='glyphicon glyphicon-record'></span> Save".html_safe , data: {disable_with: disable_spinning("Filtering...")} , class: "btn btn-primary"%>
+    <% end %>
   </div>
-</div>
-<style>
-.container{
-    margin-top:30px;
-}
-.filter-col{
-    padding-left:10px;
-    padding-right:10px;
-}
-</style>
+</aside>
+<script>
+    $("#q_location_id_in").select2({
+        placeholder: "Select a Locations"
+    });
+    $("#q_user_id_in").select2({
+        placeholder: "Select Employees"
+    });
+</script>
