--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -42,7 +42,7 @@
         <section class="scrollable wrapper w-f">
           <section class="panel panel-default">
             <div class="table-responsive">
-              <table class="table table-striped m-b-none">
+              <table class="table m-b-none">
                 <thead>
                 <tr>
                   <!--<th width="20"><input type="checkbox"></th>-->
